# ml-code-examples

./: README.md  pyproject.toml
cousera_nlp/course1/week1_logistic_regression/: 01_preprocessing.ipynb  02_word_frequencies.ipynb  utils.py  week1_assignment.ipynb
cousera_nlp/course1/week2_naive_bayes/: 01_visualizing_naive_bayes.ipynb  utils.py  week2_assignment.ipynb
hands_on_ml_book_examples/ch02_end_to_end_ml_project/: ch02.ipynb
ml_with_pytorch_and_sklearn/ch02/: ch02.ipynb  perceptron.py
