[tool.poetry]
name = "ml-code-examples"
version = "0.1.0"
description = "My implementations of machine learning algorithms and examples"
authors = ["Arpan Majumdar <arpan.majumdar.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
numpy = "^2.2.2"
requests = "^2.32.3"
nltk = "^3.9.1"
torch = "^2.6.0"
torchdata = "^0.10.1"
torchtext = "^0.18.0"
spacy = "^3.8.4"
altair = "^5.5.0"
gputil = "^1.4.0"
datasets = "^3.2.0"
transformers = "^4.48.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
